#UIL9_887 - Code for Jacoco Coverage for fn-strcture-validator